--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
 	Thunderforest.addTo(mymap);
 
-	L.tileLayer('http://localhost:8080/basemap/{z}/{x}/{y}/map.png', {
+	L.tileLayer('/basemap/{z}/{x}/{y}/map.png', {
 		maxZoom: 18,
 		attribution: 'test',
 		id: 'yo.lo'
