--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
   var Thunderforest = L.tileLayer('https://{s}.tile.thunderforest.com/pioneer/{z}/{x}/{y}.png?apikey={apikey}', {
     attribution: '&copy; <a href="http://www.thunderforest.com/">Thunderforest</a>, &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
     apikey: '67c81b4fa2bd4162a522c3cfb5821925',
-    maxZoom: 22
+		maxZoom: 22,
+		opacity: 0.8
   }); 
 
 	var mymap = L.map('mapid').setView([48.855, 2.34], 14);
