--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
 <div id="mapid" style="width: 100vw; height: 100vh;"></div>
 <script>
 
+	var host = "localhost"
+
   // http://thunderforest.com/maps/ -> neighbourhood, pioneer, ...
   var Thunderforest = L.tileLayer('https://{s}.tile.thunderforest.com/pioneer/{z}/{x}/{y}.png?apikey={apikey}', {
     attribution: '&copy; <a href="http://www.thunderforest.com/">Thunderforest</a>, &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
@@ -72,7 +74,7 @@
 	mymap.on('click', onMapClick);
 
 	async function placeLetter(letter, lat, lng) {
-		const rawResponse = await fetch('//localhost:3000/letter', {
+		const rawResponse = await fetch('/letter', {
 			method: 'POST',
 			headers: {
 				'Accept': 'application/json',
